--- a/ultralytics/models/v8/accModel/yolov8sTPH.yaml
+++ b/ultralytics/models/v8/accModel/yolov8sTPH.yaml
@@ -16,7 +16,7 @@ backbone:
   - [-1, 1, Conv, [512, 3, 2]]  # 5-P4/16
   - [-1, 6, C2f, [512, True]]
   - [-1, 1, Conv, [1024, 3, 2]]  # 7-P5/32
-  - [-1, 3, C2f, [1024, True]]
+  - [-1, 3, C3TR, [1024, True]]
   - [-1, 1, SPPF, [1024, 5]]  # 9
 
 # YOLOv8.0s head
@@ -29,12 +29,28 @@ head:
   - [[-1, 4], 1, Concat, [1]]  # cat backbone P3
   - [-1, 3, C2f, [256]]  # 15 (P3/8-small)
 
+  - [-1, 1, nn.Upsample, [None, 2, 'nearest']]
+  - [[-1, 2], 1, Concat, [1]]  # cat backbone P2
+  - [-1, 1, SPP,[128, [5, 9 , 12]]]
+  - [-1, 3, C2f, [128]]  # 19 (P2/8-small)
+  - [-1, 1, CBAM, [128]] # 20
+
+  - [-1, 1, Conv, [128, 3, 2]]
+  - [[-1, 15, 4], 1, Concat, [1]]  # cat head P4
+  - [-1, 1, SPP, [256, [5, 9 ,12]]]
+  - [-1, 3, C2f, [512]]  # (P4/16-medium)
+  - [-1, 1, CBAM, [256]] # 25
+
   - [-1, 1, Conv, [256, 3, 2]]
-  - [[-1, 12], 1, Concat, [1]]  # cat head P4
-  - [-1, 3, C2f, [512]]  # 18 (P4/16-medium)
+  - [[-1, 12, 6], 1, Concat, [1]]  # cat head P4
+  - [-1, 1, SPP, [256, [3, 7 ,9]]]
+  - [-1, 3, C2f, [512]]  #  (P4/16-medium)
+  - [-1, 1, CBAM, [512]] # 30
 
   - [-1, 1, Conv, [512, 3, 2]]
   - [[-1, 9], 1, Concat, [1]]  # cat head P5
-  - [-1, 3, C2f, [1024]]  # 21 (P5/32-large)
+  - [-1, 1, SPP, [256, [3, 5 ,7]]]
+  - [-1, 3, C3TR, [1024]]  # 21 (P5/32-large)
+  - [-1, 1, CBAM, [1024]] # 35
 
-  - [[15, 18, 21], 1, Detect, [nc]]  # Detect(P3, P4, P5)
+  - [[20, 25, 30, 35], 1, Detect, [nc]]  # Detect(P3, P4, P5)
