--- a/ultralytics/yolo/cfg/default.yaml
+++ b/ultralytics/yolo/cfg/default.yaml
@@ -2,13 +2,13 @@
 # Default training settings and hyperparameters for medium-augmentation COCO training
 
 task: detect  # inference task, i.e. detect, segment, classify
-mode: train  # YOLO mode, i.e. train, val, predict, export
+mode: train # YOLO mode, i.e. train, val, predict, export
 
 # Train settings -------------------------------------------------------------------------------------------------------
-model:  # path to model file, i.e. yolov8n.pt, yolov8n.yaml
-data:  # path to data file, i.e. i.e. coco128.yaml
-epochs: 100  # number of epochs to train for
-patience: 50  # epochs to wait for no observable improvement for early stopping of training
+model: yolov8sTPH.yaml # path to model file, i.e. yolov8n.pt, yolov8n.yaml
+data: cocopest.yaml # path to data file, i.e. i.e. coco128.yaml
+epochs: 200  # number of epochs to train for
+patience: 300  # epochs to wait for no observable improvement for early stopping of training
 batch: 16  # number of images per batch (-1 for AutoBatch)
 imgsz: 640  # size of input images as integer or w,h
 save: True  # save train checkpoints and predict results
@@ -16,10 +16,10 @@ save_period: -1 # Save checkpoint every x epochs (disabled if < 1)
 cache: False  # True/ram, disk or False. Use cache for data loading
 device:  # device to run on, i.e. cuda device=0 or device=0,1,2,3 or device=cpu
 workers: 8  # number of worker threads for data loading (per RANK if DDP)
-project:  # project name
-name:  # experiment name
-exist_ok: False  # whether to overwrite existing experiment
-pretrained: False  # whether to use a pretrained model
+project: pest-dec # project name
+name: yolov8sCbam-all+ # experiment name
+exist_ok: True  # whether to overwrite existing experiment
+pretrained: True  # whether to use a pretrained model
 optimizer: SGD  # optimizer to use, choices=['SGD', 'Adam', 'AdamW', 'RMSProp']
 verbose: True  # whether to print verbose output
 seed: 0  # random seed for reproducibility
@@ -39,7 +39,7 @@ dropout: 0.0  # use dropout regularization (classify train only)
 
 # Val/Test settings ----------------------------------------------------------------------------------------------------
 val: True  # validate/test during training
-split: val  # dataset split to use for validation, i.e. 'val', 'test' or 'train'
+split: test  # dataset split to use for validation, i.e. 'val', 'test' or 'train'
 save_json: False  # save results to JSON file
 save_hybrid: False  # save hybrid version of labels (labels + additional predictions)
 conf:  # object confidence threshold for detection (default 0.25 predict, 0.001 val)
